--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://septemberonfire.github.io/freelance-vue/",
   "name": "freelance-vue",
   "private": true,
   "version": "0.0.0",
